[package]

name = "threadpool"
version = "1.4.0"
authors = ["The Rust Project Developers", "Corey Farwell <coreyf@rwell.org>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/frewsxcv/rust-threadpool"
homepage = "https://github.com/frewsxcv/rust-threadpool"
documentation = "https://docs.rs/threadpool"
description = """
A thread pool for running a number of jobs on a fixed set of worker threads.
"""
categories = ["concurrency"]

[dependencies]
num_cpus = "1.6"

[lib]
path = "lib.rs"
