[package]

name = "threadpool"
version = "2.0.0-alpha.1"
edition = "2018"
authors = ["The Rust Project Developers", "Stefan Schindler <dns2utf8@estada.ch>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-threadpool/rust-threadpool"
homepage = "https://github.com/rust-threadpool/rust-threadpool"
documentation = "https://docs.rs/threadpool"
description = """
A thread pool for running a number of jobs on a fixed set of worker threads.
"""
keywords = ["threadpool", "thread", "pool", "threading", "parallelism"]
categories = ["concurrency", "os"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "CHANGES.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[dependencies]
num_cpus = "1.13.1"
